--- a/visualization/demo01/parts/posvsneg.html
+++ b/visualization/demo01/parts/posvsneg.html
@@ -12,10 +12,10 @@
 <!-- prepare a DOM container with width and height -->
 <div id="main" style="width: 800px;height:600px;"></div>
 </body>
+
 <script type="text/javascript">
 
     var myChart = echarts.init(document.getElementById('main'));
-
     var dataMap = {};
     function dataFormatter(obj) {
         var pList = ['JAN','FEB','MAR','APR','MAY','JUN','JUL','AUG','SEP','OCT','NOV','DEC'];
@@ -62,71 +62,71 @@
         2012:[200,554,591,577,703,655,715,582,525,383,373,504],
         2011:[1,2,3,4,5,6,9,11,578,559,592,612]
     });
-    setTimeout(function () {
+    var xAxisData = [];
+    var data1 = [];
+    var data2 = [];
 
-        option = {
-            legend: {},
-            tooltip: {
-                trigger: 'axis',
-                showContent: false
-            },
-            dataset: {
-                source: [
-                    ['product', '2011','2012', '2013', '2014', '2015', '2016', '2017','2018','2019'],
-                    ['Positive Articles', dataMap.dataPOS['2011sum'],dataMap.dataPOS['2012sum'],dataMap.dataPOS['2013sum'],dataMap.dataPOS['2014sum'],dataMap.dataPOS['2015sum'],
-                        dataMap.dataPOS['2016sum'],dataMap.dataPOS['2017sum'],dataMap.dataPOS['2018sum'],dataMap.dataPOS['2019sum']],
-                    ['Negative Articles', dataMap.dataNEG['2011sum'],dataMap.dataNEG['2012sum'],dataMap.dataNEG['2013sum'],dataMap.dataNEG['2014sum'],dataMap.dataNEG['2015sum'],
-                        dataMap.dataNEG['2016sum'],dataMap.dataNEG['2017sum'],dataMap.dataNEG['2018sum'],dataMap.dataNEG['2019sum']
-                    ]
-                ]
-            },
-            xAxis: {type: 'category'},
-            yAxis: {gridIndex: 0},
-            grid: {top: '55%'},
-            series: [
-                {type: 'line', smooth: true, seriesLayoutBy: 'row'},
+    var year2011 = 2011;
+    for (var i = 0; i < 9; i++) {
+        var curryear = year2011 + i;
+        xAxisData.push(curryear);
+        data1.push( dataMap.dataPOS[curryear+'sum']);
+        data2.push( -dataMap.dataNEG[curryear+'sum']);
+    }
 
-                {type: 'line', smooth: true, seriesLayoutBy: 'row'},
-                {
-                    type: 'pie',
-                    id: 'pie',
-                    radius: '30%',
-                    center: ['50%', '25%']
-                    ,
-                    label: {
-                        formatter: '{b}: {@2012} ({d}%)'
-                    },
-                    encode: {
-                        itemName: 'product',
-                        value: '2012',
-                        tooltip: '2012'
-                    }
+    option = {
+        title: {
+            text: 'CNN articles'
+        },
+        legend: {
+            data: ['positive', 'negtive'],
+            align: 'left',
+            right: '20%'
+
+        },
+        toolbox: {
+            // y: 'bottom',
+            feature: {
+                magicType: {
+                    type: ['stack', 'tiled']
+                },
+                dataView: {},
+                saveAsImage: {
+                    pixelRatio: 2
                 }
-            ]
-        };
-
-        myChart.on('updateAxisPointer', function (event) {
-            var xAxisInfo = event.axesInfo[0];
-            if (xAxisInfo) {
-                var dimension = xAxisInfo.value + 1;
-                myChart.setOption({
-                    series: {
-                        id: 'pie',
-                        label: {
-                            formatter: '{b}: {@[' + dimension + ']} ({d}%)'
-                        },
-                        encode: {
-                            value: dimension,
-                            tooltip: dimension
-                        }
-                    }
-                });
             }
-        });
+        },
+        tooltip: {},
+        xAxis: {
+            data: xAxisData,
+            silent: false,
+            splitLine: {
+                show: false
+            }
+        },
+        yAxis: {
+        },
+        series: [{
+            name: 'positive',
+            type: 'bar',
+            data: data1,
+            animationDelay: function (idx) {
+                return idx * 10;
+            }
+        }, {
+            name: 'negtive',
+            type: 'bar',
+            data: data2,
+            animationDelay: function (idx) {
+                return idx * 10 + 100;
+            }
+        }],
+        animationEasing: 'elasticOut',
+        animationDelayUpdate: function (idx) {
+            return idx * 5;
+        }
+    };
 
-        myChart.setOption(option);
-
-    });
+    myChart.setOption(option);
     </script>
 </html>
-
