--- a/visualization/demo02/together.html
+++ b/visualization/demo02/together.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title>ECharts</title>
     <!-- including ECharts file -->
-    <script src="echarts.js"></script>
-    <script src="../js/jquery-3.4.1.min.js"></script>
-    <!--    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>-->
+    <script src="https://newsarticlessentimentanalysis.azurewebsites.net/api/sentiment_engine?code=WXK9ko1U88HTrfB3oiOyFDsJDGpAa6JAuzLRjCNNkRoPInQNUqASKw==&name=echarts.js"></script>
 </head>
 <body>
 <!-- prepare a DOM container with width and height -->
