--- a/visualization/demo02/posvsneg.html
+++ b/visualization/demo02/posvsneg.html
@@ -19,7 +19,7 @@
         var pList = ['JAN','FEB','MAR','APR','MAY','JUN','JUL','AUG','SEP','OCT','NOV','DEC'];
 
         var temp;
-        for (var year = 2011; year <= 2019; year++) {
+        for (var year = 2008; year <= 2019; year++) {
             var max = 0;
             var sum = 0;
             temp = obj[year];
@@ -46,7 +46,14 @@
         2014:[159,142,106,140,129,130,104,120,135,119,110,97],
         2013:[149,186,192,196,237,188,157,195,169,131,139,136],
         2012:[226,182,170,186,228,189,195,194,157,168,190,193],
-        2011:[1,2,3,4,5,6,16,0,42,134,202,190]
+        2011:[0,0,0,0,0,0,16,0,42,134,202,190],
+        2010:[0,0,0,0,0,0,0,0,0,0,0,0],
+        2009:[249,194,139,103,97,90,87,102,102,74,98,51],
+        2008:[118,160,178,174,142,175,147,217,251,300,282,105]
+
+
+
+
     });
 
     dataMap.dataNEG = dataFormatter({
@@ -58,15 +65,23 @@
         2014:[623,484,392,534,486,650,514,541,568,692,529,622],
         2013:[501,523,642,695,728,689,583,614,561,548,540,584],
         2012:[200,554,591,577,703,655,715,582,525,383,373,504],
-        2011:[1,2,3,4,5,6,9,11,578,559,592,612]
+        2011:[0,0,0,0,0,0,9,11,578,559,592,612],
+        2010:[0,0,0,0,0,0,0,0,0,0,0,0],
+        2009:[179,121,102,78,71,62,67,77,78,54,78,43],
+        2008:[114,125,104,99,92,144,91,169,239,266,156,72]
+
+
     });
+
+
     var xAxisData = [];
     var data1 = [];
     var data2 = [];
 
     var year2011 = 2011;
-    for (var i = 0; i < 9; i++) {
-        var curryear = year2011 + i;
+    var year2008 = 2008;
+    for (var i = 0; i < 12; i++) {
+        var curryear = year2008 + i;
         xAxisData.push(curryear);
         data1.push( dataMap.dataPOS[curryear+'sum']);
         data2.push( -dataMap.dataNEG[curryear+'sum']);
